--- a/src/app/heroes/components/heroe-tarjeta/heroe-tarjeta.component.html
+++ b/src/app/heroes/components/heroe-tarjeta/heroe-tarjeta.component.html
@@ -4,23 +4,23 @@
     <mat-card-subtitle> {{ heroe.alter_ego }} </mat-card-subtitle>
   </mat-card-header>
 
-  <img
-    mat-card-image
-    [src]="heroe | imagen"
-    [alt]="heroe.superhero"
-  />
+  <img mat-card-image [src]="heroe | imagen" [alt]="heroe.superhero" />
 
   <mat-card-content>
     <h3>{{ heroe.publisher }}</h3>
     <p>
-      <strong> Primera aparación: {{ heroe.first_apparence }} </strong>
+      <strong> Primera aparación: {{ heroe.first_appearance }} </strong>
       <br />
       <strong>Personajes: {{ heroe.characters }} </strong>
     </p>
   </mat-card-content>
 
   <mat-card-actions>
-    <button mat-button color="warn">Leer más...</button>
-    <button mat-button color="info">Editar</button>
+    <button mat-button color="warn" [routerLink]="['/heroes', heroe.id]">
+      Leer más...
+    </button>
+    <button mat-button color="info" [routerLink]="['/heroes/editar', heroe.id]">
+      Editar
+    </button>
   </mat-card-actions>
 </mat-card>
