--- a/src/app/heroes/pages/agregar/agregar.component.html
+++ b/src/app/heroes/pages/agregar/agregar.component.html
@@ -1,1 +1,57 @@
-<p>agregar works!</p>
+<h1>Nuevo Héroe <small>asd</small></h1>
+
+<div fxLayout="row" fxLayoutGap="40px" fxLayout.xs="column">
+  <div fxFlex="50" fxLayout="column">
+    <div fxLayout="row" fxLayoutGap="20px" fxLayout.xs="column">
+      <mat-form-field fxFlex="100" fxLayout.xs="column">
+        <mat-label>Super Héroe</mat-label>
+        <input matInput type="text" required [(ngModel)]="heroe.superhero" />
+      </mat-form-field>
+      <mat-form-field fxFlex="100">
+        <mat-label>Alter Ego</mat-label>
+        <input matInput type="text" required [(ngModel)]="heroe.alter_ego" />
+      </mat-form-field>
+    </div>
+    <mat-form-field>
+      <mat-label>Primera Aparición</mat-label>
+      <input
+        matInput
+        type="text"
+        required
+        [(ngModel)]="heroe.first_appearance"
+      />
+    </mat-form-field>
+    <mat-form-field>
+      <mat-label>Personajes</mat-label>
+      <input matInput type="text" required [(ngModel)]="heroe.characters" />
+    </mat-form-field>
+    <mat-form-field>
+      <mat-label>Creador</mat-label>
+      <mat-select required [(ngModel)]="heroe.publisher">
+        <mat-option
+          *ngFor="let publishers of publisher"
+          [value]="publishers.id"
+        >
+          {{ publishers.desc }}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+    <mat-form-field>
+      <mat-label>Foto url</mat-label>
+      <input matInput type="url" required [(ngModel)]="heroe.alt_img" />
+    </mat-form-field>
+    <br />
+
+    <div fxLayout>
+      <button mat-raised-button color="primary" (click)="guardar()">
+        <mat-icon>edit</mat-icon> Guardar
+      </button>
+      <span class="spacer"></span>
+      <button *ngIf="heroe.id" mat-raised-button color="warn"  (click)="borrarHeroe()" >
+        <mat-icon>remove</mat-icon>
+        Borrar
+      </button>
+    </div>
+  </div>
+  <div fxFlex="50"><img [src]="heroe | imagen" /></div>
+</div>
