--- a/src/app/heroes/pages/agregar/agregar.component.html
+++ b/src/app/heroes/pages/agregar/agregar.component.html
@@ -1,4 +1,6 @@
-<h1>Nuevo Héroe <small>asd</small></h1>
+<h1>
+  Nuevo Héroe <small> {{ heroe.superhero }} </small>
+</h1>
 
 <div fxLayout="row" fxLayoutGap="40px" fxLayout.xs="column">
   <div fxFlex="50" fxLayout="column">
@@ -47,7 +49,12 @@
         <mat-icon>edit</mat-icon> Guardar
       </button>
       <span class="spacer"></span>
-      <button *ngIf="heroe.id" mat-raised-button color="warn"  (click)="borrarHeroe()" >
+      <button
+        *ngIf="heroe.id"
+        mat-raised-button
+        color="warn"
+        (click)="borrarHeroe()"
+      >
         <mat-icon>remove</mat-icon>
         Borrar
       </button>
