--- a/src/app/heroes/pages/agregar/agregar.component.html
+++ b/src/app/heroes/pages/agregar/agregar.component.html
@@ -1,5 +1,6 @@
 <h1>
-  Nuevo Héroe <small> {{ heroe.superhero }} </small>
+  {{ heroe.id ? "Editar" : "Nuevo" }} Héroe
+  <small> {{ heroe.superhero }} </small>
 </h1>
 
 <div fxLayout="row" fxLayoutGap="40px" fxLayout.xs="column">
@@ -46,7 +47,7 @@
 
     <div fxLayout>
       <button mat-raised-button color="primary" (click)="guardar()">
-        <mat-icon>edit</mat-icon> Guardar
+        <mat-icon>edit</mat-icon> {{ heroe.id ? "Actualizar" : "Crear" }}
       </button>
       <span class="spacer"></span>
       <button
